--- a/quarto-pres.qmd
+++ b/quarto-pres.qmd
@@ -810,7 +810,7 @@ p1 + p2 + plot_layout(guides = "collect")
 |---------------|---------|---------|---------|---------|
 | regulated     | 45.08   | 195.62  | 334.58  | 456.19  |
 |               | (41.07) | (30.76) | (25.84) | (23.07) |
-| log(WHP)      | -2.37   | -4.92   | -2.86   | -36.08  |
+| ln(WHP)      | -2.37   | -4.92   | -2.86   | -36.08  |
 |               | (6.67)  | (6.23)  | (5.99)  | (6.53)  |
 | reg x ln(WHP) | 5.64    | -18.31  | -46.33  | -46.20  |
 |               | (9.81)  | (8.44)  | (7.68)  | (7.61)  |
